--- a/src/AdminLogin.css
+++ b/src/AdminLogin.css
@@ -1,6 +1,6 @@
 .login-page {
-    background-image: url('../public/school.jpeg');
-    background-size: cover;
+    background-image: url('../public/school.jpg');
+    background-size: contain;
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -56,7 +56,3 @@
   .submit-button:hover {
     background-color: #0056b3;
   }
-  
-  
-  
-  
