--- a/src/App.css
+++ b/src/App.css
@@ -216,3 +216,49 @@ img ,svg{
     color: white;
     font-size: 20px;
 }
+
+#assess_test_row {
+    padding-top: 20px;
+    padding-left: 10px;
+}
+
+.row {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+@media (min-width: 992px)
+.col-lg-1 {
+    -ms-flex: 0 0 8.333333%;
+    flex: 0 0 8.333333%;
+    max-width: 8.333333%;
+}
+
+@media (min-width: 992px)
+.col-lg-10 {
+    -ms-flex: 0 0 83.333333%;
+    flex: 0 0 83.333333%;
+    max-width: 83.333333%;
+}
+
+.que_option {
+    object-fit: contain;
+    font-family: Manrope;
+    font-size: 16px;
+    font-weight: 600;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.73;
+    letter-spacing: normal;
+    text-align: left;
+    color: #1d1d1d;
+    display: block;
+}
+
+*, ::after, ::before {
+    box-sizing: border-box;
+}
