--- a/src/AdminLogin.css
+++ b/src/AdminLogin.css
@@ -1,58 +1,58 @@
 .login-page {
-    background-image: url('../public/school.jpg');
-    background-size: contain;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .login-card {
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    background-color: #fff;
-    padding: 20px;
-  }
-  
-  .login-heading {
-    text-align: center;
-    margin-bottom: 30px;
-    color: #333;
-    font-size: 24px;
-    font-weight: bold;
-  }
-  
-  .form-group {
-    margin-bottom: 20px;
-  }
-  
-  .form-label {
-    font-weight: bold;
-  }
-  
-  .form-control {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 8px 12px;
-  }
-  
-  .text-danger {
-    color: #dc3545;
-  }
-  
-  .submit-button {
-    width: 100%;
-    margin-top: 30px;
-    background-color: #007bff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    font-weight: bold;
-    color: #fff;
-    transition: background-color 0.3s ease;
-  }
-  
-  .submit-button:hover {
-    background-color: #0056b3;
-  }
+  background-image: url("../public/school.jpg");
+  background-size: contain;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-card {
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+  padding: 20px;
+}
+
+.login-heading {
+  text-align: center;
+  margin-bottom: 30px;
+  color: #333;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-label {
+  font-weight: bold;
+}
+
+.form-control {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 8px 12px;
+}
+
+.text-danger {
+  color: #dc3545;
+}
+
+.submit-button {
+  width: 100%;
+  margin-top: 30px;
+  background-color: #007bff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  font-weight: bold;
+  color: #fff;
+  transition: background-color 0.3s ease;
+}
+
+.submit-button:hover {
+  background-color: #0056b3;
+}
